merge release verifier 0.8.1.0